# LABS

lab0ver1/: CMakeLists.txt  main.cpp
lab0ver1/modules/module1/: CMakeLists.txt  module1.cpp
lab0ver1/modules/module2/: CMakeLists.txt  module2.h
lab0ver1/modules/module3/: CMakeLists.txt  module3.h
